<resources>
    <string name="app_name">NewsAPI</string>
    <string name="terms_of_user_register">Click Register or LoginYou agree to the User Agreement and Commenting Rules.</string>
    <string name="team_site"><![CDATA[https://mservices.ria.ru/docs/get/article?project=ria.ru&lang=rus&article_id=1748006692]]></string>
    <string name="error_input_email">Wrong format</string>
    <string name="select_country">Select country</string>
    <string name="back">back</string>
    <string name="category">category:</string>
    <string name="language">language:</string>
    <string name="total_history">Total History:\u0020</string>
    <string name="total_favorites">Total Favorites:\u0020</string>
    <string name="total_sources">Total Sources:\u0020</string>
    <string name="favorites">Favorites:\u0020</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="readOn">Read on</string>
    <string name="anonymous_author">Anonymous author</string>
    <string name="source_loaded">Register to discover more features</string>
    <string name="error_sources_download">errorSourcesDownload</string>
    <string name="press_again">Press again to exit</string>
    <string name="not_authorized">Not authorized</string>
    <string name="user_none">This user does not exist</string>
    <string name="create_account">Account created successfully</string>
    <string name="check_login">Check your login</string>
    <string name="check_email">Check your email</string>
    <string name="unique_email_username">Email and username must be unique</string>
    <string name="invalid_password">Invalid password</string>
    <string name="deleteAccount">Delete account</string>
    <string name="delete_favorites">Delete favorites</string>
    <string name="delete_history">Delete history</string>
    <string name="delete_sources">Delete sources</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="warning_account">You will not be able to recover your account</string>
    <string name="warning_favorites">You will not be able to recover your favorites</string>
    <string name="warning_history">You will not be able to recover your history</string>
    <string name="warning_sources">You will not be able to recover your sources</string>
    <string name="warning_logout">Are you sure you want to logout?</string>
    <string name="clearHistory">Clear history</string>
    <string name="clearFavorites">Clear Favorites</string>
    <string name="errorLoadingAccount">Error loading account</string>
    <string name="noChangeAccount">No change Account</string>
    <string name="dataUpdated">Data updated</string>
    <string name="inputDateThirty">No later than 30 days</string>
    <string name="selectDatePiker">Select Date</string>
    <string name="errorSelectSources">Select Sources</string>
    <string name="sourcesSaved">Source Saved</string>
    <string name="loginAddToFavorites">Log in to add to favorites</string>
    <string name="categoryBusiness">Business</string>
    <string name="categoryEntertainment">Entertainment</string>
    <string name="categoryGeneral">General</string>
    <string name="categoryHealth">Health</string>
    <string name="categoryScience">Science</string>
    <string name="categorySports">Sports</string>
    <string name="categoryTechnology">Technology</string>
    <string name="favoritesLike">Favorites</string>
    <string name="favoritesHistory">History</string>
    <string name="menuSources">Sources</string>
    <string name="menuSearch">Search</string>
    <string name="menuTop">Top</string>
    <string name="menuFavorites">Favorites</string>
    <string name="menuProfile">Profile</string>
    <string name="account">Account</string>
    <string name="edit_information">Edit Information</string>
    <string name="requests_per_day">Requests per day</string>
    <string name="_60_100">60 из 100</string>
    <string name="logout">Logout</string>
    <string name="appearance">Appearance</string>
    <string name="font_size">Font size</string>
    <string name="dark_theme">Dark theme</string>
    <string name="image_upload">Image upload</string>
    <string name="screen_settings">Screen settings</string>
    <string name="save_history">Save history</string>
    <string name="save_history_select">Save history Select</string>
    <string name="customize_category">Customize category</string>
    <string name="show_favorites_sources_in_a_list">Show favorites sources in a list</string>
    <string name="notification">Notification</string>
    <string name="get_notification_firebase">Get Notification FireBase</string>
    <string name="additional_information">Additional Information</string>
    <string name="about_the_application">About the application</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="technical_support">Technical support</string>
    <string name="file_screen">Экран Файлов</string>
    <string name="delete_account">Delete account</string>
    <string name="clearSources">Clear Sources</string>
    <string name="empty_list">Empty List</string>
    <string name="save_sources">Save Sources</string>
    <string name="authorization">Authorization</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="search_keyword_in">Search keyword in</string>
    <string name="sorting">Sorting</string>
    <string name="select_sources">Select Sources</string>
    <string name="history_request">History Request</string>
    <string name="search_news_only_sources">Search News only sources</string>
    <string name="select_date">Select Date</string>
    <string name="invalid_date">Invalid date</string>
    <string name="search">Search</string>
    <string name="viewed">viewed</string>
    <string name="news">News</string>
    <string name="website">WebSite</string>
    <string name="helperFilter">Applies to all tabs</string>
    <string name="hintSelectCountry">SelectCountry</string>
    <string name="default_all_sources">Default All Sources</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="textDelete">Dark theme style missing</string>
    <string name="searchNewsKey">Search News KeyWord</string>
    <string name="notAvailable">Not yet available</string>
    <string name="error_load_news">Data loading error</string>
    <string name="error_load_default">Something went wrong, please try again later.</string>
    <string name="errorCountryNotSelected">Country not selected</string>
    <string name="historyCanNotBeCleared">History can not be cleared</string>
    <string name="categories_order">Categories order</string>
    <string name="show_by_helper">Display mode:</string>
    <string name="filter">Filter</string>
    <string name="add_key">Add Key</string>
    <string name="get_key">Go to site</string>
    <string name="empty_keys">No active keys</string>
    <string name="input_key">Enter key</string>
    <string name="keys_management">Keys management</string>
    <string name="not_connection">There is no internet connection. Turn on the Internet and, if necessary, restart the application.</string>
    <string name="search_view_title">Search in News</string>
    <string name="error_search_key">Enter keyword</string>
    <string name="figure_titie">Фигуры</string>
</resources>