<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerNews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:padding="@dimen/padding_5"
        android:paddingBottom="?actionBarSize" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/countryTextInput"
        style="@style/MyFilledBox"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_10"
        android:gravity="center"
        android:hint="@string/hintSelectCountry"
        android:visibility="gone"
        app:helperText="@string/helperFilter"
        app:hintTextColor="@color/color_primary_app">

        <ru.gb.veber.newsapi.utils.CustomAutoCompleteTextView
            android:id="@+id/countryAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:dropDownHeight="wrap_content"
            android:paddingStart="@dimen/padding_5" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/statusTextList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_20"
        android:text="@string/empty_list"
        android:textColor="@color/color_black"
        android:textSize="@dimen/text_size_status_text"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBarTopNews"
        style="@style/progressBarDefault" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filterButton"
        style="@style/floatingActionButtonDefault"
        app:layout_behavior=".view.topnews.fragment.filteranimation.BehaviorActionButton"
        app:srcCompat="@drawable/filter_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/closeFilter"
        style="@style/floatingActionButtonDefault"
        android:visibility="gone"
        app:layout_behavior=".view.topnews.fragment.filteranimation.BehaviorActionButtonCancel"
        app:srcCompat="@drawable/close_icon48" />

    <include
        android:id="@+id/behaviorInclude"
        layout="@layout/news_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>