<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerNews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:paddingBottom="?actionBarSize" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/countryTextInput"
        style="@style/MyFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/hintSelectCountry"
        android:theme="@style/TextInputLayoutAppearance"
        android:visibility="gone"
        app:endIconMode="clear_text"
        app:helperText="@string/helperFilter"
        app:hintTextColor="@color/color_primary_app">

        <ru.gb.veber.newsapi.utils.CustomAutoCompleteTextView
            android:id="@+id/countryAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/statusTextList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/empty_list"
        android:textColor="@color/color_black"
        android:textSize="36sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBarTopNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary_app"
        app:layout_behavior=".view.topnews.pageritem.BehaviorActionButton"
        app:srcCompat="@drawable/filter_icon"
        app:tint="@color/color_white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cancelFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary_app"
        android:visibility="gone"
        app:layout_behavior=".view.topnews.pageritem.BehaviorActionButtonCancel"
        app:srcCompat="@drawable/close_icon48"
        app:tint="@color/color_white" />

    <include
        android:id="@+id/behaviorInclude"
        layout="@layout/news_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>